--- a/gm.html
+++ b/gm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Good Morning Crush Generator</title>
+    <title>Hi, Good Morning!</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -173,4 +173,5 @@
 
     </script>
 </body>
+
 </html>
